--- a/rng_date_scheduler.info.yml
+++ b/rng_date_scheduler.info.yml
@@ -1,7 +1,8 @@
 name: RNG Date Scheduler (Experimental)
 type: module
-description: 'Date scheduler.'
+description: 'Control whether a user can register based on current time in relation to date fields attached to an event entity.'
 package: RNG
 core: 8.x
 dependencies:
   - rng
+  - datetime
