Added event date provider service.
Simplify .module, moved helper function to new event date provider service.
Added max age cache setting to date explain controller to fix non-final date cache persistence.

--- a/rng_date_scheduler.services.yml
+++ b/rng_date_scheduler.services.yml
@@ -4,3 +4,7 @@ services:
     arguments: ['@entity_type.manager', '@rng.event_manager']
     tags:
       - { name: event_subscriber }
+  rng_date_scheduler.event_dates:
+    class: Drupal\rng_date_scheduler\EventDateProvider
+    arguments: ['@request_stack', '@rng.event_manager']
+    parent: container.trait
