--- a/rng_date_scheduler.info.yml
+++ b/rng_date_scheduler.info.yml
@@ -4,5 +4,5 @@ description: 'Control whether a user can register based on current time in relat
 package: RNG
 core: 8.x
 dependencies:
-  - rng
+  - rng (>= 8.x-1.0)
   - datetime
