--- a/rng_date_scheduler.info.yml
+++ b/rng_date_scheduler.info.yml
@@ -3,6 +3,7 @@ type: module
 description: 'Control whether a user can register based on current time in relation to date fields attached to an event entity.'
 package: RNG
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - rng (>= 8.x-1.0)
   - datetime
