rng module compatibility fixes

--- a/rng_date_scheduler.info.yml
+++ b/rng_date_scheduler.info.yml
@@ -5,5 +5,5 @@ package: RNG
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
-  - rng (>= 8.x-1.0)
-  - datetime
+  - rng:rng
+  - drupal:datetime
