--- a/rng_date_scheduler.links.task.yml
+++ b/rng_date_scheduler.links.task.yml
@@ -2,7 +2,7 @@ rng_date_scheduler.local_tasks:
   class: \Drupal\Core\Menu\LocalTaskDefault
   deriver: \Drupal\rng_date_scheduler\Plugin\Derivative\LocalTasks
 
-entity.event_type.date_scheduler:
-  route_name: entity.event_type.date_scheduler
-  base_route: entity.event_type.edit_form
+entity.rng_event_type.date_scheduler:
+  route_name: entity.rng_event_type.date_scheduler
+  base_route: entity.rng_event_type.edit_form
   title: 'Date scheduler'
