--- a/rng_date_scheduler.routing.yml
+++ b/rng_date_scheduler.routing.yml
@@ -1,7 +1,7 @@
-entity.event_type.date_scheduler:
-  path: '/admin/structure/rng/event_types/manage/{event_type}/date_scheduler'
+entity.rng_event_type.date_scheduler:
+  path: '/admin/structure/rng/event_types/manage/{rng_event_type}/date_scheduler'
   defaults:
-    _entity_form: 'event_type.date_scheduler'
+    _entity_form: 'rng_event_type.date_scheduler'
     _title: 'Date scheduler'
   requirements:
     _permission: 'administer event types'
